--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "homepage":"/",
   "private": true,
   "type": "module",
+  "scripts": {
+    "start": "node out/app.js",
+    "prestart": "npm run build",
+    "build": "tsc"
+  },
   "dependencies": {
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
