docs: updaete configs

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "advent-of-code-2022",
   "version": "0.1.0",
-  "homepage":"/",
+  "homepage": "/",
   "private": true,
   "type": "module",
   "scripts": {
@@ -23,7 +23,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "prettier": "^2.6.2",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
@@ -100,13 +100,10 @@
     ]
   },
   "devDependencies": {
-    "core-js": "^3.4.5",
-    "nodemon": "^2.0.1",
-    "shelljs": "^0.8.3",
-    "ts-node": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "babel-eslint": "^10.1.0",
+    "core-js": "^3.4.5",
     "eslint": "^8.21.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -121,9 +118,12 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^3.2.0",
+    "nodemon": "^2.0.1",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
     "prettier-eslint-cli": "^6.0.1",
-    "sass": "^1.54.4"
+    "sass": "^1.54.4",
+    "shelljs": "^0.8.3",
+    "ts-node": "^9.1.1"
   }
 }
